index: fixing our sponsonsors

--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -160,7 +160,7 @@
 </section>
 
 <section class="wrapper emph-infos">
-  <div class="title">{% trans 'Nos sponsors' %}</div>
+  <div class="title">{% trans 'Our sponsors' %}</div>
   <div class="container">
     <p>
       {% blocktrans %}
