--- a/prologin/gcc/templates/gcc/news/unsubscribe.html
+++ b/prologin/gcc/templates/gcc/news/unsubscribe.html
@@ -1,30 +1,23 @@
 {% extends "gcc/base.html" %}
 {% load static %}
-
 {% block title %}GCC! − Désinscription{% endblock %}
-
 {% block head %}
-  <link rel="stylesheet" href="{% static "gcc/css/index.css"%}">
-{% endblock %}
-
-{% block content %}
-  <section class="wrapper style1">
-    <div class="container">
-      <div class="title">Désinscription</div>
-
-      <div style="text-align: center; max-width: 600px; margin: auto;">
+<link rel="stylesheet" href="{% static " gcc/css/index.css"%}"> {% endblock %} {% block content %} <section class="wrapper style1">
+<div class="container">
+    <div class="title">Désinscription</div>
+    <div style="text-align: center; max-width: 600px; margin: auto;">
         <h2>Se désinscrire de la lettre d'information</h2>
         {% if fail %}
-          <p>
+        <p>
             Une erreur est survenue lors de la désinscription, veuillez
             réessayer.
-          </p>
+        </p>
         {% endif %}
         <form method="post">{% csrf_token %}
-          {{ form.as_p }}
-          <input class="style3" type="submit" value="Valider">
+            {{ form.as_p }}
+            <input class="style3" type="submit" value="Valider">
         </form>
-      </div>
     </div>
-  </section>
+</div>
+</section>
 {% endblock %}
