gcc: partial spellchecker pass

--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -53,8 +53,8 @@
           <li>
             <a href="{% url 'gcc:index' %}">{% trans 'Home' %}</a>
           </li>
-          <li class="{% active '^/gcc/ressources/' %}">
-            <a href="{% url 'gcc:ressources' %}">{% trans 'Ressources' %}</a>
+          <li class="{% active '^/gcc/resources/' %}">
+            <a href="{% url 'gcc:resources' %}">{% trans 'Ressources' %}</a>
           </li>
           <li class="{% active '^/gcc/editions/' %}">
             <a href="{% url 'gcc:editions' %}">{% trans 'Editions' %}</a>
