--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -7,7 +7,7 @@
     <div class="container">
         <p>
             {% blocktrans %}
-            The Girls Can Code! summer camp is an initiation week to programming for
+            The Girls Can Code! Summer camp is an initiation week to programming for
             teenage girls.
             {% endblocktrans %}
         </p>
@@ -59,7 +59,7 @@
                         The internship's goal is to adapt to each of you so you do not have to have a minimal level in IT before the internship.
                         Beside, go take a look to
                         {% endblocktrans %}
-                        <a href="{% url 'gcc:ressources' %}">{% trans 'some resources' %}</a>
+                        <a href="{% url 'gcc:resources' %}">{% trans 'some resources' %}</a>
                         {% blocktrans %}
                         to peek a look at what's coming !
                         {% endblocktrans %}
