--- a/prologin/gcc/templates/gcc/resources.html
+++ b/prologin/gcc/templates/gcc/resources.html
@@ -5,12 +5,12 @@
 
 {% block content %}
 <section class="wrapper emph-infos important">
-    <div class="title">S'entraîner à coder</div>
+    <div class="title">Train to code</div>
     <div class="container">
       <p>
         {% blocktrans %}
-        Many ressources are available on the internet to start coding, but it is sometime hard not to get lost in this ocean of informations.
-        We detail here some intresting ressources to start learning.
+        Many resources are available on the internet to start coding, but it is sometime hard not to get lost in this ocean of informations.
+        We detail here some interesting resources to start learning.
         {% endblocktrans %}
       </p>
     </div>
@@ -28,8 +28,8 @@
       <p>
         {% blocktrans %}
         It's important to know in which language we want to start programming in when starting because we learn to program in a language.
-        During the summer camps we mainly teach Python, which we recommand to start.
-        It's an easy language to start with (compared to other...) and it has many uses. Youtube for example is coded in Python.
+        During the summer camps we mainly teach Python, which we recommend to start.
+        It's an easy language to start with (compared to other...) and it has many uses. YouTube for example is coded in Python.
         {% endblocktrans %}
       </p>
     </div>
@@ -49,7 +49,7 @@
           <h3><a target="_blank" href="{{url}}">France IOI</a></h3>
           <p>
             {% blocktrans %}
-            France-IOI offers a learning platform with exercices organized by level of difficulty, everything accessible completly freely and fully in french !
+            France-IOI offers a learning platform with exercises organized by level of difficulty, everything accessible completely freely and fully in french !
             {% endblocktrans %}
           </p>
           <a target="_blank" href="{{url}}" class="button style1">France IOI</a>
@@ -64,7 +64,7 @@
           <h3><a target="_blank" href="{{url}}">Codeacademy</a></h3>
           <p>
             {% blocktrans %}
-            If you speak a little english, Codeacademy is a good ressource pour te lancer dans la programation.
+            If you speak a bit of English, Codeacademy is a good resource to start programming.
             {% endblocktrans %}
           </p>
           <a target="_blank"  href="{{url}}" class="button style1">Codeacademy</a>
@@ -80,7 +80,7 @@
     <p>
         {% blocktrans %}
         The good thing when learning to program, is that it can be used in many ways, to do plenty of things
-        There are a lot of sub domain or application in computer science, and to keep coding, it's more fun to find somethong we realy like
+        There are a lot of sub domain or application in computer science, and to keep coding, it's more fun to find something we really like
         Here are some examples:
         {% endblocktrans %}
     </p>
@@ -97,9 +97,9 @@
           <h3><a href="{{url}}">Django girls</a></h3>
           <p>
               {% blocktrans %}
-              They have written a tutorial to create a blog in Python thanks to the django framework.
+              They have written a tutorial to create a blog in Python thanks to the Django framework.
               It has been entirely translated in french and is very accessible.
-              Django is a very powefull tool for web platforms. Both the GCC! and Prologin Site use django.
+              Django is a very powerful tool for web platforms. Both the GCC! and Prologin websites use Django.
               {% endblocktrans %}
           </p>
         </div>
@@ -117,7 +117,7 @@
               {% blocktrans %}
               It's the name of the organization that organize the Girls Can Code! camps but i's also a computer science contest for people under 21 years old.
               On the website, you can find archives of the previous years exercises.
-              They are small exercises that give a entry and expect a precise answer, and it's your task to code the program givig the expected answer !
+              They are small exercises that give a entry and expect a precise answer, and it's your task to code the program giving the expected answer !
               {% endblocktrans %}
          </p>
         </div>
